fix(theme-chalk): pagination align

--- a/packages/theme-chalk/src/pagination.scss
+++ b/packages/theme-chalk/src/pagination.scss
@@ -8,6 +8,9 @@
 @include b(pagination) {
   @include set-component-css-var('pagination', $pagination);
 
+  display: inline-flex;
+  align-items: center;
+
   white-space: nowrap;
   padding: 2px 5px;
   color: var(--el-pagination-text-color);
@@ -16,7 +19,9 @@
 
   span:not([class*='suffix']),
   button {
-    display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     font-size: var(--el-pagination-font-size);
     min-width: var(--el-pagination-button-width);
     height: var(--el-pagination-button-height);
@@ -269,7 +274,9 @@
     padding: 0 4px;
     background: var(--el-pagination-bg-color);
     vertical-align: top;
-    display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     font-size: var(--el-pagination-font-size);
     min-width: var(--el-pagination-button-width);
     height: var(--el-pagination-button-height);
